tests/baselines/reference/functionOverloads3.errors.txt
functionOverloads3.ts(1,10): error TS2391: Function implementation is missing or not immediately following the declaration.


==== functionOverloads3.ts (1 errors) ====
    function foo():string;
             ~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.